# contrast-heatmap

./: .gitignore  Cargo.toml  README.md  generate-heatmap.js
chrome-extension/: manifest.json  offscreen.html  offscreen.js  popup.html  popup.js  service_worker.js  viewer.html  viewer.js
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  build.rs  build_frontend.mjs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: build.mjs  index.html  main.js  package-lock.json  package.json
ui/src/: app.css  app.jsx  index.css
